Feature : nvim-lua 마이그레이션

--- a/install
+++ b/install
@@ -9,3 +9,6 @@ mkdir -p $HOME/.local/bin
 
 rm -rf $HOME/.local/bin/t
 ln -sf $DOTFILES/scripts/t $HOME/.local/bin/t
+
+rm -rf $HOME/.config/nvim
+ln -s $DOTFILES/nvim $HOME/.config/nvim
