alacritty 설정 심볼릭 링크 추가

--- a/install
+++ b/install
@@ -22,6 +22,9 @@ ln -s $DOTFILES/.gitconfig $HOME/.gitconfig
 rm -rf $HOME/.gitignore
 ln -s $DOTFILES/.gitignore $HOME/.gitignore
 
+rm -rf $HOME/.config/alacritty/alacritty.toml
+ln -s $DOTFILES/alacritty.toml $HOME/.config/alacritty.toml
+
 terminfo="~/.terminfo/"
 [ ! -d $terminfo ] && echo "Directory  DOES NOT exists."
 
