--- a/install
+++ b/install
@@ -35,3 +35,10 @@ if [ ! -d $terminfo ]; then
     && rm $tempfile
 fi
 
+# fish 관련 패키지 추가
+curl -sL https://raw.githubusercontent.com/jorgebucaran/fisher/main/functions/fisher.fish | source && fisher install jorgebucaran/fisher                                                                                                                                                                │
+
+fisher install PatrickF1/fzf.fish                                                                                                                                                                                                                                                                       │
+fisher install IlanCosman/tide@v5                                                                                                                                                                                                                                                                       │
+fisher install jorgebucaran/nvm.fish                                                                                                                                                                                                                                                                    │
+fisher install edc/bass                                                                                                                                                                                                                                                                                 │
