--- a/install
+++ b/install
@@ -28,6 +28,9 @@ ln -s $DOTFILES/alacritty.toml $HOME/.config/alacritty.toml
 
 ln -s $DOTFILES/pyrightconfig.json $HOME/pyrightconfig.json
 
+rm -rf $HOME/.hammerspoon/
+ln -s $DOTFILES/.hammerspoon/ $HOME/.hammerspoon
+
 terminfo="~/.terminfo/"
 [ ! -d $terminfo ] && echo "Directory  DOES NOT exists."
 
