fish 관련 패키지 설치

--- a/install
+++ b/install
@@ -42,9 +42,4 @@ if [ ! -d $terminfo ]; then
 fi
 
 # fish 관련 패키지 추가
-curl -sL https://raw.githubusercontent.com/jorgebucaran/fisher/main/functions/fisher.fish | source && fisher install jorgebucaran/fisher                                                                                                                                                                │
-
-fisher install PatrickF1/fzf.fish
-fisher install IlanCosman/tide@v5
-fisher install jorgebucaran/nvm.fish
-fisher install edc/bass
+./fish_package_install.fish
